# deepx

./: .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  setup_commands.sh
deepxctl/: go.mod  (+1 more)
excuter/cpp-common/: CMakeLists.txt
excuter/cpp-common/src/client/: udpserver.cpp  udpserver.hpp  unixsocketserver.cpp  unixsocketserver.hpp
excuter/cpp-common/src/deepx/: dtype.hpp  shape.cpp  shape.hpp  shape_broadcast.hpp  shape_changeshape.cpp  shape_changeshape.hpp  shape_concat.hpp  shape_matmul.cpp  shape_matmul.hpp  shape_range.cpp  shape_reduce.cpp  shape_reduce.hpp  shape_tensorinit.cpp  tensor.hpp  tensorbase.hpp
excuter/cpp-common/src/deepx/mem/: mem.hpp
excuter/cpp-common/src/deepx/tensorfunc/: authors.hpp  changeshape.hpp  elementwise.hpp  elementwise_basic.hpp  elementwise_compare.hpp  elementwise_exp.hpp  elementwise_sin.hpp  init.hpp  init_util.hpp  io.hpp  matmul.hpp  print.hpp  reduce.hpp  tensorlife.hpp
excuter/cpp-common/src/deepx/tf/: arg.hpp  new.hpp  tf.cpp  tf.hpp  tffactory.cpp  tffactory.hpp
excuter/cpp-common/src/stdutil/: error.hpp  fs.cpp  fs.hpp  num.cpp  num.hpp  print.hpp  string.cpp  string.hpp  vector.hpp
excuter/cpp-common/test/: 0_dtypes.cpp  1_tf.cpp  1_tfcheck.cpp  2_saveload.cpp  CMakeLists.txt
excuter/op-mem-cuda/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  dockerbuild.sh  log.md
excuter/op-mem-cuda/src/client/: main.cpp  tfs.cpp  tfs.hpp
excuter/op-mem-cuda/src/deepx/: dtype_cuda.hpp
excuter/op-mem-cuda/src/deepx/mem/: mem_cuda.hpp
excuter/op-mem-cuda/src/deepx/op/: arg.hpp  concat.hpp  elementwise.hpp  init.hpp  matmul.hpp  new.hpp  opfactory.cpp  reduce.hpp  transpose.hpp
excuter/op-mem-cuda/src/deepx/tensorfunc/: activite.hpp  authors.hpp  broadcast.hpp  changeshape_miaobyte.cu  changeshape_miaobyte.cuh  changeshape_miaobyte.hpp  compare.hpp  concat.hpp  cuda.hpp  cuda_atomic.cuh  cuda_math.cuh  elementwise.hpp  elementwise_cublas_basic.hpp  elementwise_miaobyte_basic.cu  elementwise_miaobyte_basic.cuh  elementwise_miaobyte_basic.hpp  elementwise_miaobyte_compare.cu  elementwise_miaobyte_compare.cuh  elementwise_miaobyte_compare.hpp  elementwise_miaobyte_sin.cu  elementwise_miaobyte_sin.cuh  elementwise_miaobyte_sin.hpp  elementwise_miaobyte_sin_a.cu  elementwise_miaobyte_sqrt.cu  elementwise_miaobyte_sqrt.cuh  elementwise_miaobyte_sqrt.hpp  elementwise_miaobyte_sqrt_a.cu  equal.hpp  file.hpp  init.cu  init.hpp  init_miaobyte.cu  init_miaobyte.cuh  init_miaobyte.hpp  io_miaobyte.hpp  matmul.hpp  matmul_cublas.hpp  new.hpp  new_mempool.hpp  print.cu  (+11 more)
excuter/op-mem-cuda/src/deepx/tensorfunc copy/: elementwise.hpp
excuter/op-mem-cuda/src/deepx/tf/: arg.hpp  changeshape.hpp  elementwise_basic.hpp  elementwise_compare.hpp  elementwise_sin.hpp  elementwise_sqrt.hpp  init.hpp  io.hpp  matmul.hpp  new.hpp  print.hpp  reduce.hpp  tensorlife.hpp  tffactory.cpp  tffactory.hpp
excuter/op-mem-cuda/test/tensorfunc/: 0_new.cpp  1_cublas_add.cpp  1_cublas_matmul.cpp  2_changeshape.cpp  CMakeLists.txt
excuter/op-mem-ompsimd/: .cursorrules  CMakeLists.txt  Dockerfile  dockerbuild.sh  log.md
excuter/op-mem-ompsimd/src/client/: excuter.hpp  main.cpp  opmap.cpp  opmap.h  send.py  server.cpp  server.hpp  tfs.cpp  udpsend.py  udpserver.cpp  udpserver.hpp  unixsocketserver.cpp  unixsocketserver.hpp  yml.cpp  yml.hpp
excuter/op-mem-ompsimd/src/deepx/: dtype.hpp  dtype_ompsimd.hpp  shape.cpp  shape_concat.cpp  shape_concat.hpp  shape_reduce.cpp  shape_reduce.hpp  shape_tensorinit.hpp  shapeslice.cpp  shapeslice.hpp  tensor.hpp  tensormap.hpp
excuter/op-mem-ompsimd/src/deepx/client/: main.cpp
excuter/op-mem-ompsimd/src/deepx/mem/: mem.hpp  mem_ompsimd.hpp  tensormap.hpp
excuter/op-mem-ompsimd/src/deepx/op/: activite.hpp  arg.hpp  changeshape.hpp  concat.hpp  elementwise.hpp  init.hpp  matmul.hpp  minmax.hpp  new.hpp  op.cpp  op.hpp  opfactory.cpp  opfactory.hpp  print.hpp  reduce.hpp  reshape.hpp  transpose.hpp
excuter/op-mem-ompsimd/src/deepx/op/cpu/: activite.cpp  activite.hpp  broadcast.hpp  compare.hpp  concat.hpp  elementwise.cpp  elementwise.hpp  equal.hpp  file.hpp  funclist.hpp  init.cpp  init.hpp  matmul.cpp  matmul.hpp  new.hpp  new_mempool.hpp  print.hpp  reduce.cpp  reduce.hpp  transpose.hpp
excuter/op-mem-ompsimd/src/deepx/optimizer/: optimizer.hpp
excuter/op-mem-ompsimd/src/deepx/tensorfunc/: activite.cpp  activite.hpp  authors.hpp  broadcast.hpp  changeshape.hpp  changeshape_miaobyte.hpp  compare.hpp  concat.hpp  elementwise.hpp  elementwise_cblas.hpp  elementwise_miaobyte.hpp  equal.hpp  file.hpp  highway.hpp  init.hpp  init_miaobyte.hpp  io_miaobyte.hpp  matmul.cpp  matmul.hpp  matmul_cblas.hpp  matmul_miaobyte.hpp  new.hpp  print.hpp  print_miaobyte.hpp  reduce.cpp  reduce.hpp  reduce_miaobyte.hpp  reshape.hpp  tensorlife_miaobyte.hpp  transpose.hpp
excuter/op-mem-ompsimd/src/deepx/tf/: arg.hpp  changeshape.hpp  elementwise.hpp  init.hpp  io.hpp  matmul.hpp  new.hpp  print.hpp  reduce.hpp  tensorlife.hpp  tffactory.cpp  tffactory.hpp
excuter/op-mem-ompsimd/src/stdutil/: vector.hpp
excuter/op-mem-ompsimd/test/op/: 1_argset.cpp  1_mem.cpp  1_relu.cpp  1_tensorfunc.cpp  2_add.cpp  2_tensormap_new.cpp  3_matmul.cpp  3_matmul.py  4_sgd.cpp  CMakeLists.txt
excuter/op-mem-ompsimd/test/simd/: 1_array_mul.cpp  CMakeLists.txt
excuter/op-mem-ompsimd/test/tensor/: 1_shape.cpp  2_shape_combintion.cpp  2_tensor_equal.cpp  2_tensor_new.cpp  2_tensor_range.cpp  3_tensor_print.cpp  4_tensor_add.cpp  4_tensor_matmul.cpp  4_tensor_max.cpp  4_tensor_mul.cpp  4_tensor_sub.cpp  5_tensor_sum.cpp  6_tensor_broadcast.cpp  7_tensor_transpose.cpp  8_tensor_concat.cpp  CMakeLists.txt  tensorutil.hpp
excuter/op-mem-ompsimd/test/tensorfunc/: 1_mem.cpp  1_relu.cpp  1_shape.cpp  2_tensor_equal.cpp  2_tensor_new.cpp  2_tensor_range.cpp  2_tensor_range.py  3_tensor_print.cpp  4_sgd.cpp  4_tensor_add.cpp  4_tensor_matmul.cpp  4_tensor_max.cpp  4_tensor_mul.cpp  4_tensor_sub.cpp  5_tensor_sum.cpp  6_tensor_broadcast.cpp  7_tensor_transpose.cpp  8_tensor_concat.cpp  CMakeLists.txt
(+408 files in other folders)
