add_executable(1_mem 1_mem.cpp)
target_link_libraries(1_mem deepx)

add_executable(1_relu 1_relu.cpp)
target_link_libraries(1_relu deepx)


add_executable(2_add 2_add.cpp)
target_link_libraries(2_add deepx)

add_executable(3_matmul 3_matmul.cpp)
target_link_libraries(3_matmul deepx)

add_executable(4_sgd 4_sgd.cpp)
target_link_libraries(4_sgd deepx)